# flare-x-Google

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  bigquery_fetcher.py  hardhat.config.js  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  setup.py  supervisord.conf
.github/workflows/: build_and_push.yml  lint.yml
artifacts/@openzeppelin/contracts/access/Ownable.sol/: Ownable.dbg.json
artifacts/contracts/DeFiAuditReport.sol/: DeFiAuditReport.json
artifacts/contracts/RugPullVerifier.sol/: IStateConnector.dbg.json  IStateConnector.json  RugPullVerifier.json
artifacts/contracts/test/MockStateConnector_storage.sol/: MockStateConnector.dbg.json  MockStateConnector.json
cache/: solidity-files-cache.json
chat-ui/: package-lock.json  package.json
chat-ui/src/: App.js
contracts/: DeFiAuditReport.sol  RugPullVerifier.sol
contracts/test/: MockStateConnector_storage.sol
flare-contracts/: package.json
scripts/: create_sample_data.py  deploy.js
src/flare_ai_defai/: __init__.py  ai_risk_analyzer.py  alert_system.py  blockchain_verifier.py  config.py  exceptions.py  main.py  settings.py
src/flare_ai_defai/ai/: __init__.py  base.py  gemini.py  openrouter.py
src/flare_ai_defai/api/: __init__.py
src/flare_ai_defai/api/routes/: chat.py
src/flare_ai_defai/attestation/: __init__.py  vtpm_attestation.py  vtpm_validation.py
src/flare_ai_defai/blockchain/: __init__.py  explorer.py  flare.py
src/flare_ai_defai/prompts/: __init__.py  library.py  schemas.py  service.py  templates.py
test/: DeFiAuditReport.js  RugPullVerifier.js
tests/: conftest.py  test_ai_service.py  test_blockchain_service.py  test_prompts.py
